--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,125 +1,152 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title></title>
-        <meta charset="utf-8">
+<head>
+  <title></title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="bootstrap.css" />
-    </head>
-    <body>
-      <div class="container">
-        <form action="/api/friends" method="POST">
-            <div class="form-group">
-                <h3 for="name"> What is your Name</h3>
-                <input class="form-control form-control-sm" type="text" placeholder="Type your Name" name="name" required>
-                <h3 for="input"> Add your picture here</h3>
-                <input class="form-control form-control-sm" type="text" placeholder="Select your URL" name="photo" required>
+</head>
 
-              <h3 for="input"> Do you like dog?</h3>
-              <select class="custom-select" name="question1" id="question1" required >
-                  <option selected>Choose...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                  <option value="3">Four</option>
-                  <option value="3">Fife</option>
-                </select>
-              <h3 for="input"> Do you like cat?</h3>
-              <select class="custom-select" name="question2" id="question2" required>
-                  <option selected>Choose...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                  <option value="3">Four</option>
-                  <option value="3">Fife</option>
-                </select>
-              <h3 for="input"> Do you like sport?</h3>
-              <select class="custom-select" name="question3" id="question3" required>
-                  <option selected>Choose...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                  <option value="3">Four</option>
-                  <option value="3">Fife</option>
-                </select>
-             
-              <h3 for="input">Do you like go to cinema?</h3>
-              <select class="custom-select" name="question4" id="question4" required>
-                  <option selected>Choose...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                  <option value="3">Four</option>
-                  <option value="3">Fife</option>
-                </select>
-              <h3 for="input">Do you like Mediterranean Food?</h3>
-              <select class="custom-select" name="question5" id="question5" required>
-                  <option selected>Choose...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                  <option value="3">Four</option>
-                  <option value="3">Fife</option>
-                </select>
-              <h3 for="input">Do you like drink wine?</h3>
-              <select class="custom-select"name="question6"id="question6" required>
-                  <option selected>Choose...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                  <option value="3">Four</option>
-                  <option value="3">Fife</option>
-                </select>
-              <h3 for="input">Do you like Hiking?</h3>
-              <select class="custom-select" name="question7" id="question7" required>
-                  <option selected>Choose...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                  <option value="3">Four</option>
-                  <option value="3">Fife</option>
-                </select>
-              <h3 for="input">Do you like Snow?</h3>
-              <select class="custom-select" name="question8" id="question8" required>
-                  <option selected>Choose...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                  <option value="3">Four</option>
-                  <option value="3">Fife</option>
-                </select>
-              <h3 for="input">Do you like Travel?</h3>
-              <select class="custom-select" name="question9" id="question9" required>
-                  <option selected>Choose...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                  <option value="3">Four</option>
-                  <option value="3">Fife</option>
-                </select>
-              <h3 for="input">Do you like classic music?</h3>
-              <select class="custom-select" name="question10" id="question10" required>
-                  <option selected>Choose...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                  <option value="3">Four</option>
-                  <option value="3">Fife</option>
-                </select>
-                <button type="submit" class="btn btn-primary mt-3">Submit</button>
-            </div>
-          </form>
-        </div>
-          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-          integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-          crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-          integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-          crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-          integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-          crossorigin="anonymous"></script>
-    </body>
+<body>
+  <div class="container">
+    <form action="/api/friends" method="POST">
+      <div class="form-group">
+        <h3 for="name"> What is your Name</h3>
+        <input class="form-control form-control-sm" id="name" type="text" placeholder="Type your Name" name="name"
+          required>
+        <h3 for="input"> Add your picture here</h3>
+        <input class="form-control form-control-sm" id="picture" type="text" placeholder="Select your URL" name="photo"
+          required>
+
+        <h3 for="input"> Do you like dog?</h3>
+        <select class="custom-select" name="question1" id="question1" required>
+          <option selected>Choose...</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+          <option value="3">Four</option>
+          <option value="3">Fife</option>
+        </select>
+        <h3 for="input"> Do you like cat?</h3>
+        <select class="custom-select" name="question2" id="question2" required>
+          <option selected>Choose...</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+          <option value="3">Four</option>
+          <option value="3">Fife</option>
+        </select>
+        <h3 for="input"> Do you like sport?</h3>
+        <select class="custom-select" name="question3" id="question3" required>
+          <option selected>Choose...</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+          <option value="3">Four</option>
+          <option value="3">Fife</option>
+        </select>
+
+        <h3 for="input">Do you like go to cinema?</h3>
+        <select class="custom-select" name="question4" id="question4" required>
+          <option selected>Choose...</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+          <option value="3">Four</option>
+          <option value="3">Fife</option>
+        </select>
+        <h3 for="input">Do you like Mediterranean Food?</h3>
+        <select class="custom-select" name="question5" id="question5" required>
+          <option selected>Choose...</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+          <option value="3">Four</option>
+          <option value="3">Fife</option>
+        </select>
+        <h3 for="input">Do you like drink wine?</h3>
+        <select class="custom-select" name="question6" id="question6" required>
+          <option selected>Choose...</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+          <option value="3">Four</option>
+          <option value="3">Fife</option>
+        </select>
+        <h3 for="input">Do you like Hiking?</h3>
+        <select class="custom-select" name="question7" id="question7" required>
+          <option selected>Choose...</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+          <option value="3">Four</option>
+          <option value="3">Fife</option>
+        </select>
+        <h3 for="input">Do you like Snow?</h3>
+        <select class="custom-select" name="question8" id="question8" required>
+          <option selected>Choose...</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+          <option value="3">Four</option>
+          <option value="3">Fife</option>
+        </select>
+        <h3 for="input">Do you like Travel?</h3>
+        <select class="custom-select" name="question9" id="question9" required>
+          <option selected>Choose...</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+          <option value="3">Four</option>
+          <option value="3">Fife</option>
+        </select>
+        <h3 for="input">Do you like classic music?</h3>
+        <select class="custom-select" name="question10" id="question10" required>
+          <option selected>Choose...</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+          <option value="3">Four</option>
+          <option value="3">Fife</option>
+        </select>
+        <button type="submit" id="submit" class="btn btn-primary mt-3">Submit</button>
+      </div>
+    </form>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script>
+    $("#submit").on("click", function (event) {
+      console.log("clicked");
+      event.preventDefault();
+      var friend = {
+        name: $("#name").val().trim(),
+        picture: $("#picture").val().trim(),
+        question1: $("#question1").val().trim(),
+        question2: $("#question2").val().trim(),
+        question3: $("#question3").val().trim(),
+        question4: $("#question4").val().trim(),
+        question5: $("#question5").val().trim(),
+        question6: $("#question6").val().trim(),
+        question7: $("#question7").val().trim(),
+        question8: $("#question8").val().trim(),
+        question9: $("#question9").val().trim(),
+        question10: $("#question10").val().trim()
+      }
+      $.ajax({
+        type: "POST",
+        url: "/api/friends",
+        data: friend,
+        dataType: "jsonp",
+      }).then(function (response) {
+        console.log(response)
+      });
+    });</script>
+</body>
+
 </html>
