--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -113,6 +113,28 @@
       </div>
     </form>
   </div>
+  <div class="modal" id="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 id = "modalName"class="modal-title">Name</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <img id="image" src="" alt="" class="img-thumbnail">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -140,9 +162,9 @@
       }
       $.ajax({
         type: "POST",
-        url: "/api/friends",
+        url: "api/friends",
         data: friend,
-        dataType: "jsonp",
+        dataType: "json",
       }).then(function (response) {
         console.log(response)
       });
